--- a/index.css
+++ b/index.css
@@ -1,28 +1,14 @@
 :root {
-    /* BOTH THEMES */
     --eerieBlack: #1C1C1C;
     --pickledBluewood: #273549;
     --whitesmoke: #f5f5f5;
     --mountainMeadow: #10B981;
-
-
-
-    /* DARK THEME */
     --squidInk: #1F2937;
     --lightGray: #D5D4D8;
     --shamrock: #4ADF86;
-    --screamingGreen: #55F991;
-    /* for the underline  */
-    --bluesmth: #2F3E53;
-
-    /* LIGHT THEME */
-    /* for the font color */
-    --peacoat: #2B283A; 
     --slateGray: #6B7280;
-    --mediumSpringGreen: #5DEF92;
     --honeydew: #ECFDF5;
 }
-
 
 body {
     margin: 0;
@@ -51,6 +37,7 @@ header label {
 header {
   margin: 100px 0 50px 0;
 }
+
 .title {
   font-size: 40px;
   letter-spacing: -0.025em;
@@ -77,7 +64,6 @@ header p {
  margin: 20px 0 60px 0;
 }
   
-
 button {
     width: 200px;
     height: 50px;
@@ -97,7 +83,6 @@ button {
     margin: 60px 0 0 -150px;
 }
 
-
 .password-container {
   display: flex;
   justify-content: space-around;
@@ -113,7 +98,6 @@ button {
     padding-top: 10px;
 }
 
-
 .dark-theme {
   background-color: var(--squidInk);
   color: var(--whitesmoke)
@@ -124,65 +108,57 @@ button {
   color: var(--eerieBlack);
 }
 
-
 @media only screen and (min-width: 1000px) {
   .container {
     width: 900px;
     justify-content: center;
    }
+
+   .password-container {
+    width: 600px;
+    margin: 50px auto;
+   }
 }
-  /* I WANTED TO USE DISPLAY:FLEX & JUSTIFY-CONTENT: FLEX-END
-  BUT IT DIDN'T PUT THE ELEMENT THERE SO I HAD TO FIX THAT USING POSITION */
-  .toggle-container {
-    position: absolute;
-    top: 0;
-    right: -100px;     
-  }
+/* I WANTED TO USE DISPLAY:FLEX & JUSTIFY-CONTENT: FLEX-END
+BUT IT DIDN'T PUT THE ELEMENT THERE SO I HAD TO FIX THAT USING POSITION */
+.toggle-container {
+  position: absolute;
+  top: 0;
+  right: -100px;     
+ }
 
-  /* WE"LL NEED TO REFACTOR THIS CODE */
-  .toggle-button {
-    position: relative;
-    width: 80px;
-    height: 40px;
-    margin-top: 10px;
-
-    background: #ffffff;
-    border: 1px solid #bbc1e1;
-    border-radius: 30px;
-    outline: none;
-    cursor: pointer; 
+.toggle-button {
+  position: relative;
+  width: 80px;
+  height: 40px;
+  margin-top: 10px;
+  background: var(--pickledBluewood);
+  border: 1px solid var(--lightGray);
+  border-radius: 30px;
+  cursor: pointer; 
+  -webkit-appearance: none;
+  transition: all 0.3s cubic-bezier(0.2, 0.85, 0.32, 1.2);
+}
   
-    -webkit-appearance: none;
-    /* -moz-appearance: none; */
-    /* appearance: none; */
-      
-    transition: all 0.3s cubic-bezier(0.2, 0.85, 0.32, 1.2);
-  }
+.toggle-button::after {
+  content: "";
+  position: absolute;
+  left: 3px;
+  top: 1.5px;
+  width: 35px;
+  height: 35px;
+  background-color: var(--lightGray);
+  border-radius: 50%;
+  transform: translateX(0);
+  transition: all 0.3s cubic-bezier(0.2, 0.85, 0.32, 1.2);
+}
   
-  .toggle-button::after {
-    content: "";
-    
-    position: absolute;
-    left: 3px;
-    top: 1.5px;
-    
-    width: 35px;
-    height: 35px;
-    background-color: var(--lightGray);
-    border-radius: 50%;
-    
-    transform: translateX(0);
-    
-    transition: all 0.3s cubic-bezier(0.2, 0.85, 0.32, 1.2);
-  }
+.toggle-button:checked::after {
+  transform: translateX(calc(100% + 3px));
+  background-color: var(--squidInk);  
+}
   
-  .toggle-button:checked::after {
-    transform: translateX(calc(100% + 3px));
-    background-color: var(--squidInk);  
-  }
+.toggle-button:checked {
+  background-color: var(--honeydew);
+}
   
-  .toggle-button:checked {
-    background-color: var(--honeydew);
-  }
-  
- 
